Enums have javadoc, too.  Change from list to hash.

--- a/yaml-test-data/src/main/resources/foo/1.yml
+++ b/yaml-test-data/src/main/resources/foo/1.yml
@@ -1,6 +1,10 @@
-Duck:
-- Bill
-- Feathers
+Duck Enum:
+  .meta:
+    doc: Walks like a duck
+  Bill:
+    doc: Sitting here on Capital Hill
+  Feathers:
+    doc: Throw me in Forochel
 
 Foo:
   .meta:
