Unify enums/classes.

--- a/yaml-test-data/src/main/resources/foo/1.yml
+++ b/yaml-test-data/src/main/resources/foo/1.yml
@@ -5,6 +5,8 @@ Duck Enum:
     doc: Sitting here on Capital Hill
   Feathers:
     doc: Throw me in Forochel
+  # Undocumented
+  Feet:
 
 Foo:
   .meta:
