Simple logger for SLF4J for Spring.
No Spring is very nosy.

--- a/yaml/pom.xml
+++ b/yaml/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>freemarker</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>binkley-yaml-test-data</artifactId>
             <scope>test</scope>
