More complex ctor for Yaml UDTs.

--- a/yaml-test-data/src/main/resources/bar/3.yml
+++ b/yaml-test-data/src/main/resources/bar/3.yml
@@ -8,6 +8,9 @@ Baz:
   kangKong:
     doc: Tasty green
     value: true
+  banana:
+    doc: Really big floating point
+    value: 1.234567890123456789
 
 Whack Foo:
   bar:
