Saving for branch switch.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     </modules>
 
     <properties>
+        <antlr4.version>4.3</antlr4.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <freemarker.version>2.3.21</freemarker.version>
         <guava.version>18.0</guava.version>
@@ -284,6 +285,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-runtime</artifactId>
+                <version>${antlr4.version}</version>
+            </dependency>
+
+	    <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -481,6 +488,18 @@
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>${maven-dependency-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>${antlr4.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
