--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
         <ini4j.version>0.5.2</ini4j.version>
         <intellij.version>12.0</intellij.version>
         <jacorb.version>3.5</jacorb.version>
-        <janino.version>2.7.7</janino.version>
+        <janino.version>2.7.8</janino.version>
         <jansi.version>1.11</jansi.version>
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
@@ -112,7 +112,7 @@
         <jsr305.version>3.0.0</jsr305.version>
         <junit.version>4.12</junit.version>
         <logback.version>1.1.2</logback.version>
-        <lombok.version>1.14.8</lombok.version>
+	<lombok.version>1.14.8</lombok.version> <!-- TODO: 1.16.0 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
@@ -138,10 +138,10 @@
         <project.reporting.sourceEncoding>${java.charset}
         </project.reporting.sourceEncoding>
         <service-binder.version>0.3</service-binder.version>
-        <slf4j.version>1.7.9</slf4j.version>
+        <slf4j.version>1.7.10</slf4j.version>
         <snakeyaml.version>1.14</snakeyaml.version>
-        <spring.version>4.1.3.RELEASE</spring.version>
-        <system-rules.version>1.7.0</system-rules.version>
+        <spring.version>4.1.4.RELEASE</spring.version>
+        <system-rules.version>1.8.0</system-rules.version>
         <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
     </properties>
 
