--- a/yaml-compile/pom.xml
+++ b/yaml-compile/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>binkley-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>binkley-yaml-runtime</artifactId>
         </dependency>
         <dependency>
