--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,13 @@
         <jsr305.version>3.0.0</jsr305.version>
         <junit.version>4.12</junit.version>
         <logback.version>1.1.2</logback.version>
-    	<lombok.version>1.14.8</lombok.version> <!-- TODO: 1.16.0 -->
+        <lombok.version>1.14.8</lombok.version>
+        <!-- TODO: 1.16.0 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
-        <maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
+        <maven-testing-plugins.version>2.17</maven-testing-plugins.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <maven-java-formatter-plugin.version>0.4
@@ -542,6 +543,16 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-testing-plugins.version}</version>
+                <configuration>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${java.io.tmpdir}
+                        </additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
                 <configuration>
@@ -562,7 +573,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-failsafe-plugin.version}</version>
+                <version>${maven-testing-plugins.version}</version>
                 <configuration>
                     <enableAssertions>true</enableAssertions>
                     <forkCount>1</forkCount>
