Test missing parent.

--- a/yaml-compile/pom.xml
+++ b/yaml-compile/pom.xml
@@ -70,5 +70,13 @@
             <artifactId>binkley-yaml-test-data</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>${java.version}</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
