--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
         <maven.version>3.1</maven.version>
         <metainf-services.version>1.5</metainf-services.version>
+        <mockito.version>1.10.19</mockito.version>
         <owner.version>1.0.6</owner.version>
         <okhttp.version>2.4.0</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
@@ -175,6 +176,18 @@
             <artifactId>jmockit</artifactId>
             <version>${jmockit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
