--- a/pom.xml
+++ b/pom.xml
@@ -92,46 +92,45 @@
     </modules>
 
     <properties>
-        <commons-lang3.version>3.3.2</commons-lang3.version>
-        <freemarker.version>2.3.21</freemarker.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
+        <freemarker.version>2.3.23</freemarker.version>
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
         <idlj-maven-plugin.version>1.2.1</idlj-maven-plugin.version>
-        <ini4j.version>0.5.2</ini4j.version>
+        <ini4j.version>0.5.4</ini4j.version>
         <intellij.version>12.0</intellij.version>
-        <jacorb.version>3.5</jacorb.version>
+        <jacorb.version>3.6.1</jacorb.version>
         <janino.version>2.7.8</janino.version>
         <jansi.version>1.11</jansi.version>
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
-        <jgitflow-maven-plugin.version>1.0-m4.3
-        </jgitflow-maven-plugin.version>
+        <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
         <jmockit.version>1.19</jmockit.version>
-        <jnr.version>3.0.9</jnr.version>
-        <jopt-simple.version>4.8</jopt-simple.version>
+        <jnr.version>3.0.17</jnr.version>
+        <jopt-simple.version>4.9</jopt-simple.version>
         <jsr305.version>3.0.0</jsr305.version>
         <junit.version>4.12</junit.version>
-        <logback.version>1.1.2</logback.version>
+        <logback.version>1.1.3</logback.version>
         <lombok.version>1.14.8</lombok.version>
         <!-- TODO: 1.16.0 -->
-        <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
-        <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
-        <maven-testing-plugins.version>2.17</maven-testing-plugins.version>
-        <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
-        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+        <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
+        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+        <maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
+        <maven-testing-plugins.version>2.18.1</maven-testing-plugins.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
         <maven-java-formatter-plugin.version>0.4
         </maven-java-formatter-plugin.version>
-        <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
-        <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
-        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
+        <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
+        <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven.version>3.1</maven.version>
-        <metainf-services.version>1.5</metainf-services.version>
-        <mockito.version>1.10.19</mockito.version>
-        <owner.version>1.0.6</owner.version>
-        <okhttp.version>2.4.0</okhttp.version>
+        <metainf-services.version>1.6</metainf-services.version>
+        <mockito.version>2.0.31-beta</mockito.version>
+        <owner.version>1.0.9</owner.version>
+        <okhttp.version>2.5.0</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
         <project.build.outputEncoding>${java.charset}
         </project.build.outputEncoding>
@@ -142,11 +141,11 @@
         <project.reporting.sourceEncoding>${java.charset}
         </project.reporting.sourceEncoding>
         <service-binder.version>0.3</service-binder.version>
-        <slf4j.version>1.7.10</slf4j.version>
-        <snakeyaml.version>1.14</snakeyaml.version>
-        <spring.version>4.1.4.RELEASE</spring.version>
-        <system-rules.version>1.8.0</system-rules.version>
-        <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <snakeyaml.version>1.16</snakeyaml.version>
+        <spring.version>4.2.1.RELEASE</spring.version>
+        <system-rules.version>1.12.1</system-rules.version>
+        <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
     </properties>
 
     <dependencies>
