--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,10 @@
   ~
   ~ Please see https://github.com/binkley/binkley/blob/master/LICENSE.md.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -102,7 +105,8 @@
         <jansi.version>1.11</jansi.version>
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
-        <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
+        <jgitflow-maven-plugin.version>1.0-m5.1
+        </jgitflow-maven-plugin.version>
         <jmockit.version>1.19</jmockit.version>
         <jnr.version>3.0.17</jnr.version>
         <jopt-simple.version>4.9</jopt-simple.version>
@@ -110,10 +114,10 @@
         <junit.version>4.12</junit.version>
         <logback.version>1.1.3</logback.version>
         <lombok.version>1.14.8</lombok.version>
-        <!-- TODO: 1.16.0 -->
         <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>2.10
+        </maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
         <maven-testing-plugins.version>2.18.1</maven-testing-plugins.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
