--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>hm.binkley</groupId>
     <artifactId>binkley-blog</artifactId>
-    <version>6</version>
+    <version>7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>binkley's BLOG</name>
