--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>6</version>
+        <version>7-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-logging</artifactId>
