--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <module>corba</module>
         <module>dynafig</module>
         <module>lombok</module>
+        <module>magic-bus</module>
         <module>value-type</module>
         <module>xio</module>
         <module>xml</module>
