--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <version>9</version>
     </parent>
 
     <groupId>hm.binkley</groupId>
@@ -132,6 +132,8 @@
         <maven.version>3.1</maven.version>
         <metainf-services.version>1.6</metainf-services.version>
         <mockito.version>2.0.31-beta</mockito.version>
+        <nexus-staging-maven-plugin.version>1.6.3
+        </nexus-staging-maven-plugin.version>
         <owner.version>1.0.9</owner.version>
         <okhttp.version>2.5.0</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
@@ -715,6 +717,17 @@
                     </arguments>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <useReleaseProfile>false</useReleaseProfile>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus-staging-maven-plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
         </plugins>
