--- a/pom.xml
+++ b/pom.xml
@@ -495,6 +495,7 @@
                 <artifactId>freemarker</artifactId>
                 <version>${freemarker.version}</version>
             </dependency>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
