--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
         <freemarker.version>2.3.23</freemarker.version>
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
-        <hamcrest.version>1.3</hamcrest.version>
+        <hamcrest.version>2.0.0.0</hamcrest.version>
         <idlj-maven-plugin.version>1.2.1</idlj-maven-plugin.version>
         <ini4j.version>0.5.4</ini4j.version>
         <intellij.version>12.0</intellij.version>
@@ -195,7 +195,13 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-junit</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
