--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <commons-lang3.version>3.4</commons-lang3.version>
         <curator.version>2.9.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
+        <generateBackupPoms>false</generateBackupPoms>
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
