--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
     </modules>
 
     <properties>
+        <!-- @formatter:off -->
         <commons-lang3.version>3.4</commons-lang3.version>
         <curator.version>2.9.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
@@ -111,8 +112,7 @@
         <jansi.version>1.11</jansi.version>
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
-        <jgitflow-maven-plugin.version>1.0-m5.1
-        </jgitflow-maven-plugin.version>
+        <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
         <jmockit.version>1.19</jmockit.version>
         <jnr.version>3.0.17</jnr.version>
         <jopt-simple.version>4.9</jopt-simple.version>
@@ -122,33 +122,26 @@
         <lombok.version>1.14.8</lombok.version>
         <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>2.10
-        </maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
         <maven-testing-plugins.version>2.18.1</maven-testing-plugins.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <maven-java-formatter-plugin.version>0.4
-        </maven-java-formatter-plugin.version>
+        <maven-java-formatter-plugin.version>0.4</maven-java-formatter-plugin.version>
         <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
         <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven.version>3.1</maven.version>
         <metainf-services.version>1.6</metainf-services.version>
         <mockito.version>2.0.31-beta</mockito.version>
-        <nexus-staging-maven-plugin.version>1.6.6
-        </nexus-staging-maven-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.6</nexus-staging-maven-plugin.version>
         <owner.version>1.0.9</owner.version>
         <okhttp.version>2.5.0</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
-        <project.build.outputEncoding>${java.charset}
-        </project.build.outputEncoding>
-        <project.build.sourceEncoding>${java.charset}
-        </project.build.sourceEncoding>
-        <project.reporting.outputEncoding>${java.charset}
-        </project.reporting.outputEncoding>
-        <project.reporting.sourceEncoding>${java.charset}
-        </project.reporting.sourceEncoding>
+        <project.build.outputEncoding>${java.charset}</project.build.outputEncoding>
+        <project.build.sourceEncoding>${java.charset}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${java.charset}</project.reporting.outputEncoding>
+        <project.reporting.sourceEncoding>${java.charset}</project.reporting.sourceEncoding>
         <service-binder.version>0.3</service-binder.version>
         <slf4j.version>1.7.12</slf4j.version>
         <snakeyaml.version>1.16</snakeyaml.version>
@@ -156,6 +149,7 @@
         <spring.version>4.2.1.RELEASE</spring.version>
         <system-rules.version>1.12.1</system-rules.version>
         <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
+        <!-- @formatter:on -->
     </properties>
 
     <dependencies>
