Fix guice and lombok modules at older versions.
Lombok internals changed; Guice public API changed.  Until this code catches
up, fix them at older, working versions.

--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -14,6 +14,10 @@
 
     <artifactId>binkley-guice</artifactId>
 
+    <properties>
+        <guice.version>3.0</guice.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax.inject</groupId>
