--- a/lombok/pom.xml
+++ b/lombok/pom.xml
@@ -4,7 +4,10 @@
   ~
   ~ Please see https://github.com/binkley/binkley/blob/master/LICENSE.md.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>hm.binkley</groupId>
@@ -13,6 +16,11 @@
     </parent>
 
     <artifactId>binkley-lombok</artifactId>
+
+    <!-- TODO: Fix code to support 1.16.x lombok -->
+    <properties>
+        <lombok.version>1.14.8</lombok.version>
+    </properties>
 
     <dependencies>
         <dependency>
