--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: java
 jdk:
     - oraclejdk8
+# TODO: Gross until Travis support setting maven version or upgrades to 3.3
+before_install:
+  - wget http://apache.claz.org/maven/maven-3/3.3.3/binaries/apache-maven-3.3.3-bin.tar.gz
+  - tar zxvf apache-maven-3.3.3-bin.tar.gz
+  - chmod +x apache-maven-3.3.3/bin/mvn
+  - export M2_HOME=$PWD/apache-maven-3.3.3
+  - export PATH=$PWD/apache-maven-3.3.3/bin:${PATH}
+  - hash -r
 install: mvn install -Dmaven.javadoc.skip=true -DskipTests=true -Dgpg.skip=true
-script: mvn verify -Dmaven.javadoc.skip=true -Dgpg.skip=true
+before_script:
+  - export M2_HOME=$PWD/apache-maven-3.3.3
+  - export PATH=$PWD/apache-maven-3.3.3/bin:${PATH}
+  - hash -r
+script: mvn verify -Dgpg.skip=true
