Include pom.xml in sources jar.

--- a/pom.xml
+++ b/pom.xml
@@ -674,6 +674,7 @@
                             <addExtensions>true</addExtensions>
                         </manifest>
                     </archive>
+                    <includePom>true</includePom>
                 </configuration>
                 <executions>
                     <execution>
