--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 
     <properties>
         <!-- @formatter:off -->
+        <buildplan-maven-plugin.version>1.1</buildplan-maven-plugin.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <curator.version>3.0.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
@@ -536,6 +537,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>fr.jcgay.maven.plugins</groupId>
+                <artifactId>buildplan-maven-plugin</artifactId>
+                <version>${buildplan-maven-plugin.version}</version>
+            </plugin>
             <plugin>
                 <groupId>external.atlassian.jgitflow</groupId>
                 <artifactId>jgitflow-maven-plugin</artifactId>
