Possibly teach CORBA to litter target, not root.

--- a/corba/src/test/resources/jacorb.properties
+++ b/corba/src/test/resources/jacorb.properties
@@ -23,7 +23,7 @@ ORBInitRef.NameService=corbaloc::localhost:38693/NameService
 #ORBInitRef.NameService=http://www.x.y.z/~user/NS_Ref
 #ORBInitRef.TradingService=http://www.x.y.z/~user/TraderRef
 #ORBInitRef.InterfaceRepository=file:/c:/IR_Ref
-ORBInitRef.InterfaceRepository=file:./IR_Ref
+ORBInitRef.InterfaceRepository=file:target/IR_Ref
 
 ########################################
 #                                      #
@@ -885,7 +885,7 @@ jacorb.naming.ping=off
 
 # The file where the name server drops its IOR
 #jacorb.naming.ior_filename=c:/NS_Ref
-jacorb.naming.ior_filename=./NS_Ref
+jacorb.naming.ior_filename=target/NS_Ref
 
 # Print the ior
 #jacorb.naming.print_ior=false
