--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <curator.version>3.0.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
         <generateBackupPoms>false</generateBackupPoms>
-        <guava.version>18.0</guava.version>
+        <guava.version>19.0-rc2</guava.version>
         <guice.version>4.0</guice.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
         <idlj-maven-plugin.version>1.2.1</idlj-maven-plugin.version>
@@ -115,7 +115,7 @@
         <java.version>8</java.version>
         <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
         <jmockit.version>1.20</jmockit.version>
-        <jnr.version>3.0.20</jnr.version>
+        <jnr.version>3.0.23</jnr.version>
         <jopt-simple.version>4.9</jopt-simple.version>
         <jsr305.version>3.0.1</jsr305.version>
         <junit.version>4.12</junit.version>
@@ -143,12 +143,12 @@
         <project.build.sourceEncoding>${java.charset}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${java.charset}</project.reporting.outputEncoding>
         <project.reporting.sourceEncoding>${java.charset}</project.reporting.sourceEncoding>
-        <reactor.version>2.0.6.RELEASE</reactor.version>
+        <reactor.version>2.0.7.RELEASE</reactor.version>
         <service-binder.version>0.3</service-binder.version>
-        <slf4j.version>1.7.12</slf4j.version>
+        <slf4j.version>1.7.13</slf4j.version>
         <snakeyaml.version>1.16</snakeyaml.version>
-        <spring-boot.version>1.2.7.RELEASE</spring-boot.version>
-        <spring.version>4.2.2.RELEASE</spring.version>
+        <spring-boot.version>1.3.0.RELEASE</spring-boot.version>
+        <spring.version>4.2.3.RELEASE</spring.version>
         <system-rules.version>1.13.0</system-rules.version>
         <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
         <!-- @formatter:on -->
@@ -551,6 +551,15 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>${versions-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>update-dependencies</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>update-properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <!-- Sonatype OSS parent pom breaks intermodule dependencies otherwise -->
@@ -642,6 +651,7 @@
                     <additionalClasspathElements>
                         <additionalClasspathElement>${java.io.tmpdir}
                         </additionalClasspathElement>
+                        <showSuccess>false</showSuccess>
                     </additionalClasspathElements>
                 </configuration>
             </plugin>
