--- a/logging/src/main/resources/osi-logback.properties
+++ b/logging/src/main/resources/osi-logback.properties
@@ -26,8 +26,8 @@
 #
 
 # As an alternative to setting system properties, configure OSI logback here
-# These properties cannot, however, override these from system properties which are used before
-# this file is loaded:
+# These properties cannot, however, override these from system properties
+# which are used before this file is loaded:
 #   * logback.configurationFile - defined by logback, not this library
 #   * logback.propertiesResource - defines location of this file
 #   * logback.debug - defined in configuration file prior to loading this file
