--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <curator.version>3.0.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
         <generateBackupPoms>false</generateBackupPoms>
-        <guava.version>19.0-rc2</guava.version>
+        <guava.version>19.0</guava.version>
         <guice.version>4.0</guice.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
         <idlj-maven-plugin.version>1.2.1</idlj-maven-plugin.version>
@@ -134,10 +134,10 @@
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven.version>3.1</maven.version>
         <metainf-services.version>1.6</metainf-services.version>
-        <mockito.version>2.0.31-beta</mockito.version>
+        <mockito.version>2.0.33-beta</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.6</nexus-staging-maven-plugin.version>
         <owner.version>1.0.9</owner.version>
-        <okhttp.version>2.5.0</okhttp.version>
+        <okhttp.version>2.7.0</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
         <project.build.outputEncoding>${java.charset}</project.build.outputEncoding>
         <project.build.sourceEncoding>${java.charset}</project.build.sourceEncoding>
@@ -147,9 +147,9 @@
         <service-binder.version>0.3</service-binder.version>
         <slf4j.version>1.7.13</slf4j.version>
         <snakeyaml.version>1.16</snakeyaml.version>
-        <spring-boot.version>1.3.0.RELEASE</spring-boot.version>
-        <spring.version>4.2.3.RELEASE</spring.version>
-        <system-rules.version>1.13.0</system-rules.version>
+        <spring-boot.version>1.3.1.RELEASE</spring-boot.version>
+        <spring.version>4.2.4.RELEASE</spring.version>
+        <system-rules.version>1.15.1</system-rules.version>
         <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
         <!-- @formatter:on -->
     </properties>
