--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 sudo: false
+# Force newer JDK - compiler busted in _31 -- see - https://github.com/travis-ci/travis-ci/issues/3259
+addons:
+    apt:
+        packages:
+            - oracle-java8-installer 
 language: java
 jdk:
     - oraclejdk8
