--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,19 @@
         <url>https://travis-ci.org/binkley/binkley</url>
     </ciManagement>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>
+                https://oss.sonatype.org/service/local/staging/deploy/maven2
+            </url>
+        </repository>
+    </distributionManagement>
+
     <scm>
         <connection>scm:git:git://github.com/binkley/binkley.git</connection>
         <developerConnection>scm:git:git@github.com:binkley/binkley.git
