--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <buildplan-maven-plugin.version>1.2</buildplan-maven-plugin.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <curator.version>3.1.0</curator.version>
-        <freemarker.version>2.3.23</freemarker.version>
+        <freemarker.version>2.3.24-incubating</freemarker.version>
         <generateBackupPoms>false</generateBackupPoms>
         <guava.version>19.0</guava.version>
         <guice.version>4.0</guice.version>
@@ -121,12 +121,12 @@
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
         <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
-        <jmockit.version>1.22</jmockit.version>
+        <jmockit.version>1.23</jmockit.version>
         <jnr.version>3.0.29</jnr.version>
-        <jopt-simple.version>5.0</jopt-simple.version>
+        <jopt-simple.version>5.0.1</jopt-simple.version>
         <jsr305.version>3.0.1</jsr305.version>
         <junit.version>4.12</junit.version>
-        <logback.version>1.1.6</logback.version>
+        <logback.version>1.1.7</logback.version>
         <lombok.version>1.16.8</lombok.version>
         <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
@@ -152,7 +152,7 @@
         <project.reporting.sourceEncoding>${java.charset}</project.reporting.sourceEncoding>
         <reactor.version>2.0.7.RELEASE</reactor.version>
         <service-binder.version>0.3</service-binder.version>
-        <slf4j.version>1.7.19</slf4j.version>
+        <slf4j.version>1.7.21</slf4j.version>
         <snakeyaml.version>1.17</snakeyaml.version>
         <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
         <spring.version>4.2.5.RELEASE</spring.version>
